--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -2,6 +2,9 @@
  * This template takes a single argument, a String containing a
  * message to display.
  *@
-@(message: String)
 
-<div>Welcome ! <br> @message</div>
+@(message: String)
+<div>Welcome ! I would like to add the the dates comming back from <a href="#">https://sample-api.pascalmetrics.com/api/events?api-key=nu11p0int3r!</a>
+ are older then 2018 and I had to modify the current date to be Monday, October 31, 2016 10:10:10. This are the alerts captured for 24
+ range, that have alerted more then 2000 threshold.<br><br><br>
+ [@message] </div>
