fixed rendering of javascript

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -4,7 +4,7 @@
  *@
 
 @(message: String)
-<div>Welcome ! I would like to add that the dates cooming back from <a href="#">https://sample-api.pascalmetrics.com/api/events?api-key=nu11p0int3r!</a>
+<div>Welcome ! I would like to add that the dates coming back from <a href="#">https://sample-api.pascalmetrics.com/api/events?api-key=nu11p0int3r!</a>
  are older then 2018 and I had to modify the current date to be Monday, October 31, 2016 10:10:10. These are the alerts captured for 24
  range, that have alerted more then 2000 threshold.<br><br><br>
  [@message] </div>
